[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pas2"
version = "0.1.0"
description = "gas and flask like simple web framework. asgi!"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name = "22552", email = "you@example.com" }
]
dependencies = [
    "jinja2>=3.0",
    "python-magic>=0.4.27"
]
